--- a/assets/main.css
+++ b/assets/main.css
@@ -2871,6 +2871,12 @@ a {
   gap: 0px;
 }
 
+@media (min-width: 768px) {
+  .navigation {
+    margin-bottom: 0px;
+  }
+}
+
 .navigation .logo {
   margin-top: 0px;
   margin-bottom: 0px;
